EXTRA_DIST = \
	libnsgif-lzw-oob.gif \
	libnsgif-uninitialized-frame-fields.gif \
	lodepng-adam7-mystery-over-read.png \
	lodepng-zero-length-literal.png \
	lodepng-zlib-big-alloc.png \
	no-frame-data.gif \
	pixops-normalize-signed-overflow.gif \
	smolscale-unaligned-1.xwd \
	smolscale-unaligned-2.xwd
