EXTRA_DIST = \
	anim-local-cmaps.gif \
	anim.gif \
	card-32c-alpha.png \
	card-32c-noalpha.png \
	card-full-alpha.png \
	card-full-noalpha.png \
	noise-32x32-indexed.png \
	noise-32x32.gif \
	noise-32x32.png \
	pixel.gif \
	pixel.jpeg \
	pixel.png \
	pixel.svg \
	pixel.tiff \
	pixel.webp \
	pixel.xwd
