EXTRA_DIST = \
	anim-local-cmaps.gif \
	anim.gif \
	card-32c-alpha.png \
	card-32c-noalpha.png \
	card-full-alpha.png \
	card-full-noalpha.png \
	noise-32x32-indexed.png \
	noise-32x32.gif \
	noise-32x32.png \
	noise-32x32.xwd \
	pixel.avif \
	pixel.gif \
	pixel.heif \
	pixel.jpeg \
	pixel.jxl \
	pixel.png \
	pixel.qoi \
	pixel.svg \
	pixel.tiff \
	pixel.webp \
	pixel.xwd \
	taxic.jpg
